deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: naditos
  labels:
    name: naditos
    pod-security.kubernetes.io/enforce: restricted
